# SuperClaude_Framework

./: .env.example  .gitignore  .superclaude-metadata.json  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMAND_PARAMETER_REFERENCE.md  COMPLETE_OPTIMIZATION_SYSTEM.md  CONTRIBUTING.md  CROSS_REFERENCES.md  CRUSH.md  ENTERPRISE_SAAS_DEVELOPMENT_WORKFLOW.md  ENTERPRISE_SAAS_PRACTICAL_DEMO.md  FINAL_TESTING_SUMMARY.md  INTELLIGENT_RECOMMENDATION_ENGINE.md  LICENSE  MANIFEST.in  NAVIGATION_VALIDATION.md  NEXTJS_TYPESCRIPT_WORKFLOWS.md  PROJECT_INDEX.md  PUBLISHING.md  QUICK_ACTIONS_TEMPLATE_SYSTEM.md  QUICK_NAVIGATION.md  README-ja.md  README-zh.md  README.md  RELEASE_INSTRUCTIONS.md  ROADMAP.md  SCENARIO_QUICK_REFERENCE.md  SECURITY.md  SMART_ASSISTANT.md  SUPERCLAUDE_EXPERT_COLLABORATION_MATRIX.md  SUPERCLAUDE_OPTIMIZER.md  SuperClaude.py  SuperClaude_Hook_System_Test_Report.md  TODO.md  hook_testing_report.md  package-lock.json  package.json  (+9 more)
.github/: FUNDING.yml
.github/workflows/: memory-system-tests.yml  publish-pypi.yml  readme-quality-check.yml
Developer-Guide/: contributing-code.md  documentation-quality-checklist.md  phase2-improvements-summary.md  phase4-accessibility-summary.md  technical-architecture.md  testing-debugging.md
Docs/: README.md  agents-guide.md  commands-guide.md  flags-guide.md  installation-guide.md  personas-guide-v3-legacy.md  personas-guide.md  superclaude-user-guide.md
Docs/Developer-Guide/: README.md  contributing-code.md  documentation-index.md  technical-architecture.md  testing-debugging.md
Docs/Getting-Started/: installation.md  quick-start.md
Docs/Reference/: README.md  advanced-patterns.md  advanced-workflows.md  basic-examples.md  common-issues.md  diagnostic-reference.md  examples-cookbook.md  integration-patterns.md  mcp-server-guide.md  optimization-guide.md  quick-start-practices.md  socratic-examples.md  troubleshooting.md  validate_commands.py
Docs/User-Guide/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md  socratic-learning.md
Docs/User-Guide-jp/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
Docs/User-Guide-zh/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
Framework-Hooks/: DOCUMENTATION_UPDATE_SUMMARY.md  YAML_TESTING_REPORT.md  settings.json  superclaude-config.json  test_error_handling.py  test_hook_configs.py  test_yaml_loader.py  test_yaml_loader_fixed.py
Framework-Hooks/cache/: adaptations.json  learning_records.json  session_3087d7e3-8411-4b9f-9929-33eb542bc5ab.json  session_55ca6726.json  session_58999d51-1ce6-43bc-bc05-c789603f538b.json  session_91a37b4e-f0f3-41bb-9143-01dc8ce45a2c.json  session_929ff2f3-0fb7-4b6d-ad44-e68da1177b78.json  session_9f44ce75-b0ce-47c6-8534-67613c73aed4.json  session_9f57690b-3e1a-4533-9902-a7638defd941.json  session_id
Framework-Hooks/config/: compression.yaml  hook_coordination.yaml  intelligence_patterns.yaml  logging.yaml  mcp_orchestration.yaml  modes.yaml  orchestrator.yaml  performance.yaml  performance_intelligence.yaml  session.yaml  user_experience.yaml  validation_intelligence.yaml
Framework-Hooks/docs/: CONFIGURATION.md  INSTALLATION.md  Integration.md  Overview.md  Performance.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md
Framework-Hooks/hooks/: notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py
Framework-Hooks/patterns/: README.md
Framework-Lite/Agents/: qa-specialist.md  security-auditor.md  technical-writer.md
Framework-Lite/Commands/: implement.md  index.md  load.md
Framework-Lite/Core/: ORCHESTRATOR.md
Framework-Lite/MCP/: MCP_Magic.md
Framework-Lite/Modes/: MODE_Introspection.md  MODE_Token_Efficiency.md
Framework/Agents/: code-refactorer.md  performance-optimizer.md
Framework/Commands/: brainstorm.md  design.md  document.md  estimate.md  improve.md  reflect.md  workflow.md
Framework/Config/: hooks-config.json  requirements.json
Framework/Core/: CLAUDE.md  SESSION_LIFECYCLE.md
Framework/MCP/: MCP_Morphllm.md  MCP_Sequential.md
Guides/: agents-guide.md  behavioral-modes-guide.md  best-practices.md  commands-guide.md  examples-cookbook.md  flags-guide.md  installation-guide.md  session-management.md  superclaude-user-guide.md  technical-architecture.md  troubleshooting-guide.md
Reference/: best-practices.md  examples-cookbook.md  troubleshooting.md
SuperClaude/: __init__.py  __main__.py
SuperClaude-Lite/cache/: learning_records.json
Templates/: Template_Agent.md  Template_Command_Advanced.md  Template_Command_Basic.md  Template_Command_Session.md  Template_Command_Special.md  Template_Command_Standard.md  Template_Flag.md  Template_MCP.md  Template_Mode.md  Template_Mode_Basic_Behavioral.md  Template_Mode_Command_Integrated.md  Template_Mode_Monitoring_Analytics.md  Template_Mode_System_Architecture.md  Template_Session_Metadata.md
User-Guide/: agents.md  commands.md  flags.md  mcp-servers.md  modes.md  session-management.md
claudedocs/: SuperClaude_Workflow_Visualization.md
config/: features.json  requirements.json
profiles/: developer.json  minimal.json  quick.json
scripts/: README.md  build_and_upload.py  cleanup.sh  publish.sh  validate_pypi_ready.py
setup/: __init__.py
test-prj/: package.json
(+221 files in other folders)
